improve phone app design
